# ops-light-secrets-server

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOAL-REMAINING-BEADS.md  README.md  SECURITY.md  deny.toml  project-name.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  fuzz-scheduled.yml
benches/: BASELINE.md  audited_kv.rs
benches/baseline/: local-smoke.json
crates/test-support/: Cargo.toml
crates/test-support/src/: full_scan.rs  lib.rs
docs/: backup-format-v1.md  compatibility.md  format-freeze-v1.md  integration-tail-ledger.json  operating.md  plan-history.md  release.md  verification-contract.md
docs/decisions/: 0001-project-name.md
docs/ideas/: 2026-07-15-001-feature-ideas-top-10.md  2026-07-15-002-rotation-first-feature-ideas-top-10.md
docs/plans/: 2026-07-15-001-feat-ops-light-secrets-server-plan.md  2026-07-16-002-feat-ops-light-secrets-server-plan.md  2026-07-17-001-refactor-structural-decomposition-plan.md
docs/plans/revisions/: gpt.md
docs/plans_revisions/: 2026-07-15-001-feat-ops-light-secrets-server-plan-revisions.md  gemini.md  gpt-ideas-consolidation.md  gpt.md
docs/wayfinder/: map.md
docs/wayfinder/assets/: T02-fnox-discussions-draft.md
docs/wayfinder/tickets/: T01-product-frame.md  T02-fnox-discussions-post.md  T03-wire-protocol.md  T04-runtime-stack.md  T05-crypto-at-rest.md  T06-authn.md  T07-authz.md  T08-audit.md  T09-rotation-consumers.md  T10-recovery.md  T11-transport-deployment.md  T12-test-release-weight.md  T13-project-meta.md  T14-synthesis-rewrite.md
examples/: crypto_fixture_generator.rs  format_fixture_generator.rs
examples/systemd/: ops-light-secrets-server-control.socket  ops-light-secrets-server.service
fuzz/: Cargo.toml
fuzz/corpus/json_body/: dup.json  ok.json
fuzz/corpus/raw_target/: dotdot.txt  encoded.txt  happy.txt
fuzz/corpus/token_credential/: garbage.txt  shape.txt
fuzz/fuzz_targets/: audit_export.rs  backup_archive.rs  checkpoint_descriptor.rs  json_body.rs  raw_target.rs  record_header.rs  token_credential.rs
research/compat/: README.md  client-matrix.json
research/compat/capture/: README.md  generate_compatibility.py  normalize.py  observations.json  recorder.py  replay.py  replay_fixtures.py  run_capture.py  test_normalize.py  test_recorder.py
research/ktd2/: README.md  RESULTS.md  protocol.json  results.json
research/ktd2/spike/: Cargo.toml
research/ktd2/spike/src/: main.rs
scripts/: check-compat-capture.sh  check-compat-pins.sh  check-crypto-vectors.sh  check-deny.sh  check-differential.sh  check-fuzz.sh  check-lock-msrv.sh  check-naming.sh  e2e.sh  fetch-compat-clients.sh  generate-compatibility-doc.sh  normalize-client-traces.sh  verify-checks.json  verify.sh
scripts/release/: smoke-artifact.sh
src/: audit_export.rs  auth.rs  backup.rs  backup_format.rs  backup_verify.rs  capacity.rs  cli.rs  clock.rs  compaction.rs  compat_error.rs  config.rs  consumer.rs  credential.rs  credential_epoch.rs  doctor.rs  fault_inject.rs  format_registry.rs  http_security.rs  identity.rs  init.rs  input_hygiene.rs  kv.rs  lib.rs  main.rs  migration.rs  proxy.rs  rate_limit.rs  raw_target.rs  reconciliation.rs  recovery_fork.rs  reencrypt.rs  restore.rs  rotation.rs  startup.rs  storage_executor.rs  sys_api.rs  transaction_coordinator.rs  transport.rs
src/control/: credential_management.rs  management.rs  mod.rs
src/store/: aead.rs  audit.rs  checkpoint.rs  codec.rs  coordinator.rs  integrity.rs  keyring.rs  mod.rs  signing_trust.rs  versioned_secrets_tests.rs
tests/: api_kv.rs  api_kv_core.rs  audit.rs  auth.rs  auth_api.rs  backup.rs  backup_cli.rs  backup_format.rs  backup_verify.rs  capacity.rs  checkpoint.rs  checkpoint_cli.rs  cli_coherence.rs  clock.rs  compaction.rs  compat_errors.rs  consumer.rs  control_mgmt.rs  control_socket.rs  credential_epoch.rs  credential_epoch_cli.rs  crypto_fixtures.rs  doctor.rs  e2e_recovery_alpha.rs  format_registry.rs  harness_demo.rs  identity.rs  init.rs  input_hygiene.rs  integrity.rs  key_cli.rs  key_recovery.rs  key_rotation_suite.rs  keyring.rs  keyring_fixture.rs  metadata_remac.rs  middleware_stack.rs  migration.rs  proxy.rs  rate_limit.rs  (+25 more)
tests/acceptance/: mod.rs
tests/compat/: mod.rs
tests/differential/: compare.rs  mod.rs
tests/fault/: core_recovery_gate.rs  extended_fault.rs  txn_crash.rs
tests/fixtures/: audit-envelope-v1.json  audit-event-v1.json  auth-login-v1.json  auth-lookup-v1.json  backup-format-v1.json  capability-registry-v1.json  checkpoint-descriptor-v1.json  checkpoint-descriptor-v2.json  compat-error-contract-v1.json  credential-wire-v1.json  crypto-fixtures-manifest-v1.json  crypto-vectors-v1.json  format-freeze-v1.json  keyring-age-v0.12.json  signing-trust-v1.json  startup-scenarios.json  state-digest-v1.json  sys-api-contract-v1.json  u2-store-scenarios-v1.json
tests/fixtures/client-traces/: bao-2.6.0-direct.json  fnox-1.29.0-bao.json  fnox-1.29.0-vault.json  fnox-1.30.0-bao.json  fnox-1.30.0-vault.json  manifest.json  vault-2.0.3-direct.json
tests/fixtures/differential/: allowlist-v1.json  corpus-v1.json  openbao-oracle-v1.json  reference-pin-v1.json
tests/fixtures/e2e/: recovery-alpha-stages-v1.json  source-full-stages-v1.json
