[package]
name = "ops-light-secrets-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace]
members = ["crates/test-support", "research/ktd2/spike"]
resolver = "3"

[dependencies]
axum = "0.8.9"
blake3 = "1.8.5"
clap = { version = "4.6.2", features = ["derive", "env"] }
libc = "0.2.183"
rpassword = "7.4.0"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = "0.1.20"
tokio = { version = "1.52.4", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "1.1.3"
zeroize = "1.9.0"

[dev-dependencies]
serde_json = "1.0.150"
tempfile = "3.27.0"
test-support = { path = "crates/test-support" }
tower = { version = "0.5.3", features = ["util"] }
