[package]
name = "ops-light-secrets-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[features]
default = []
fault-inject = []

[workspace]
members = ["crates/test-support", "research/ktd2/spike"]
resolver = "3"

[dependencies]
age = { version = "=0.12.0", default-features = false }
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
base64ct = { version = "1.8.3", features = ["alloc"] }
blake3 = "1.8.5"
bech32 = "0.11.1"
chacha20poly1305 = "=0.10.1"
clap = { version = "4.6.2", features = ["derive", "env"] }
ed25519-dalek = { version = "2.2.0", features = ["zeroize"] }
libc = "0.2.183"
getrandom = "0.3.4"
rpassword = "7.4.0"
redb = "2.6.3"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
tokio = { version = "1.52.4", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.1.3"
tower-http = { version = "0.6.8", features = ["request-id", "sensitive-headers", "timeout", "trace"] }
zeroize = "1.9.0"

[dev-dependencies]
rcgen = "0.13.2"
tempfile = "3.27.0"
test-support = { path = "crates/test-support" }
tower = { version = "0.5.3", features = ["util"] }

[[test]]
name = "api_kv"
path = "tests/api_kv.rs"

[[test]]
name = "compat"
path = "tests/compat/mod.rs"

[[test]]
name = "txn_crash"
path = "tests/fault/txn_crash.rs"

[[test]]
name = "core_recovery_gate"
path = "tests/fault/core_recovery_gate.rs"

[[test]]
name = "e2e_recovery_alpha"
path = "tests/e2e_recovery_alpha.rs"

[[test]]
name = "differential"
path = "tests/differential/mod.rs"

[[bench]]
name = "audited_kv"
harness = false

[[test]]
name = "key_rotation_suite"
path = "tests/key_rotation_suite.rs"

[[test]]
name = "acceptance"
path = "tests/acceptance/mod.rs"

[[test]]
name = "extended_fault"
path = "tests/fault/extended_fault.rs"
