[package]
name = "ops-light-secrets-server-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ops-light-secrets-server = { path = ".." }
serde_json = "1"
axum = { version = "0.8", default-features = false }

[profile.release]
debug = 1

[[bin]]
name = "token_credential"
path = "fuzz_targets/token_credential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "raw_target"
path = "fuzz_targets/raw_target.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json_body"
path = "fuzz_targets/json_body.rs"
test = false
doc = false
bench = false

[[bin]]
name = "record_header"
path = "fuzz_targets/record_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "checkpoint_descriptor"
path = "fuzz_targets/checkpoint_descriptor.rs"
test = false
doc = false
bench = false
