[package]
name = "test-support"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
blake3 = "1.8.5"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
nix = { version = "0.31.3", features = ["process", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
zeroize = "1.9.0"
